--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ nav {
   flex-wrap: wrap;
   justify-content:center;
   align-items: center;
-  min-height: 50px;
+  min-height: 80px;
   font-family: "Helvetica Neue", sans-serif;
 }
 
@@ -63,8 +63,8 @@ nav {
 }
 
 .burger div{
-  width: 25px;
-  height: 3px;
+  width: 50px;
+  height: 12px;
   margin: 5px;
   background-color: black;
   transition: all 0.5s ease;
@@ -330,6 +330,12 @@ padding: 30px;
     overflow-x: hidden;
   }
 
+  nav {
+    
+    min-height: 100px;
+   
+  }
+
   .logo {
     position:unset;
     left: 0;
@@ -374,8 +380,11 @@ padding: 30px;
     height: 700px;
   }
 
-  .footer{
-    /* flex-direction: column;    */
+  .footer {
+    padding: 10px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
   }
 
 }
@@ -401,7 +410,7 @@ padding: 30px;
 
 /* --------------BURGER ANIMATION---------------------- */
 .toggle .line1{
-    transform: rotate(-45deg) translate(-6px, 6px);
+    transform: rotate(-45deg) translate(-16px, 16px);
 }
 
 .toggle .line2{
@@ -409,5 +418,5 @@ padding: 30px;
 }
 
 .toggle .line3{
-  transform: rotate(45deg) translate(-5px, -6px);
+  transform: rotate(45deg) translate(-5px, -8px);
 }
