--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,26 @@ padding: 30px;
     position:unset;
     left: 0;
   }
+
+  .nav-links {
+    background-color: white;
+    position: absolute;
+    top: 46px;
+    right: 0;
+    height: 50%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .nav-links li{
+    opacity: 0;
+  }
+  .burger{
+    display: block;
+  }
 }
 
 
