--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ html {
 * {
   padding: 0;
   margin: auto;
+  box-sizing: border-box;
 }
 
 
@@ -32,6 +33,7 @@ nav {
 }
 
 .nav-links {
+  position: absolute;
   display: flex;
   justify-items: center;
   justify-content: space-around;
@@ -275,23 +277,23 @@ textarea {
   font-family: sans-serif;
 }
 
-.footer {
+.footer-container {
   padding: 10px;
-  height: auto;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; 
 }
 
 .footer-left{
 margin: 0;
 padding: 30px 0 0 40px;
-width: fit-content;
+width:25%;
 }
 
 .footer-right{
-  display: inline-flex;
+  display:flex;
   flex-wrap: wrap;
-  width: auto;
+  width: 75%;
+  justify-content: center;
 }
 
 .footer-links{
@@ -337,8 +339,8 @@ padding: 30px;
 
   .nav-links {
     background-color: white;
-    position: absolute;
-    top: 46px;
+    position: fixed;
+    top: 108px;
     right: 0;
     height: 50%;
     width: 50%;
@@ -368,8 +370,8 @@ padding: 30px;
   }
   .nav-links {
     background-color: white;
-    position: absolute;
-    top: 46px;
+    position: fixed;
+    top: 108px;
     right: 0;
     height: 50%;
     width: 50%;
@@ -408,7 +410,11 @@ padding: 30px;
   }
 
   #section-three {
-    height: 700px;
+    height: auto;
+  }
+
+  .footer-container{
+    flex-flow: column;
   }
 
 }
