--- a/css/styles.css
+++ b/css/styles.css
@@ -280,24 +280,24 @@ textarea {
 .footer-container {
   padding: 10px;
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
 .footer-left{
 margin: 0;
-padding: 30px 0 0 40px;
-width:25%;
+padding: 30px;
 }
 
 .footer-right{
-  display:flex;
-  flex-wrap: wrap;
-  width: 75%;
-  justify-content: center;
+  display:grid;
+  justify-content: space-around;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 50px;
 }
 
 .footer-links{
 padding: 30px;
+width: 250px;
 }
 
 .footer-right h2{
@@ -413,9 +413,11 @@ padding: 30px;
     height: auto;
   }
 
-  .footer-container{
-    flex-flow: column;
+  .footer-right{
+    grid-template-columns: repeat(2, 1fr);
+  
   }
+  
 
 }
 
