--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,8 @@ nav {
 }
 
 .burger div{
-  width: 25px;
-  height: 3px;
+  width: 50px;
+  height: 10px;
   margin: 5px;
   background-color: black;
   transition: all 0.5s ease;
@@ -133,7 +133,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
   row-gap: 5rem;
-  column-gap: 9rem;
+  column-gap: 12rem;
 }
 
 .teaser-image{
@@ -200,19 +200,23 @@ nav {
 /* -----------SECTION THREE-------------------------- */
 #section-three {
   font-family: sans-serif;
+ 
+}
+
+.contact-form{
+  padding: 0 25% 3% 25%;
   display: flex;
   flex-flow: column;
   align-items: center;
   background-image: url(https://albukairiyah.com/wp-content/uploads/2021/03/Programming.jpg);
   height: auto;
-  padding-bottom: 40px;
 }
 
 .section-three-title{
   color: white;
-  margin-left: 100px;
   font-size: 2rem;
-  padding: 50px 0 40px;
+  margin: 0;
+  padding: 50px  40px;
 }
 
 .input-form{
@@ -220,7 +224,7 @@ nav {
   flex-flow: wrap;
   flex-flow: column;
   padding: 20px;
-  width: 40%;
+  width: -webkit-fill-available;
   height: auto;
   background-color: rgba(238, 229, 229, 0.747);
   border-radius: 10px;
@@ -236,7 +240,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   row-gap: 40px;
-  column-gap: 30px;
+  column-gap: 80px;
 }
 
 .input{
@@ -278,7 +282,7 @@ textarea {
 }
 
 .footer-container {
-  padding: 10px;
+  padding: 60px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -328,10 +332,6 @@ width: 250px;
    overflow-x: hidden;
   }
 
-  .input-form{
-    width: 50%;
-  }
-
   .logo {
     position:unset;
     left: 0;
@@ -355,6 +355,11 @@ width: 250px;
   }
   .burger{
     display: block;
+  }
+
+  .contact-form{
+    padding: 0 22% 3% 22%;
+    
   }
 }
 
@@ -388,15 +393,6 @@ width: 250px;
     display: block;
   }
 
-  .input-form{
-    width: 80%;
-  }
-
-  .inputs{
-    width: calc(100% - 50px);
-    grid-template-columns:none
-  }
-
   #section-two {
     margin: 50px auto;
     font-family: sans-serif;
@@ -411,6 +407,15 @@ width: 250px;
 
   #section-three {
     height: auto;
+  }
+
+  .contact-form{
+    padding: 0 3% 3% 3%;
+  }
+
+  .inputs{
+    width: calc(100% - 50px);
+    grid-template-columns:none
   }
 
   .footer-right{
@@ -442,7 +447,7 @@ width: 250px;
 
 /* --------------BURGER ANIMATION---------------------- */
 .toggle .line1{
-    transform: rotate(-45deg) translate(-6px, 6px);
+    transform: rotate(-45deg) translate(-16px, 16px);
 }
 
 .toggle .line2{
