--- a/css/styles.css
+++ b/css/styles.css
@@ -359,8 +359,28 @@ width: 250px;
 
   .contact-form{
     padding: 0 22% 3% 22%;
-    
   }
+
+  .inputs{
+    width: calc(100% - 20px);
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 40px;
+  }
+
+  .footer-container {
+    flex-flow: column;
+  }
+
+  .footer-logo{
+    padding-left: 60px;
+  }
+
+  .footer-right{
+    grid-template-columns: repeat(2, 1fr);
+  
+  }
+
 }
 
 
@@ -410,12 +430,14 @@ width: 250px;
   }
 
   .contact-form{
-    padding: 0 3% 3% 3%;
+    padding: 0 10% 5% 10%;
   }
 
   .inputs{
-    width: calc(100% - 50px);
-    grid-template-columns:none
+    width: calc(100% - 20px);
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 40px;
   }
 
   .footer-right{
