--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ nav {
   justify-content: center;
   background-color: grey;
   width: 100%;
-  height: 500px;
+  height: 550px;
 }
 
 .contact-button {
@@ -94,12 +94,13 @@ nav {
 }
 
 .btn {
+  margin: 0;
   background: black;
   border-radius: 50px;
   font-family: 'Montserrat', sans-serif;
   color: #ffffff;
   font-size: 20px;
-  padding: 10px 20px 10px 20px;
+  padding: 10px 40px ;
   text-decoration: none;
 }
 
@@ -133,11 +134,11 @@ nav {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
   row-gap: 5rem;
-  column-gap: 12rem;
+  column-gap: 9rem;
 }
 
 .teaser-image{
-  height: 175px;
+  height: 50%;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -151,6 +152,7 @@ nav {
 
 .teaser{
   width: 350px;
+  height: 350px;
   background: white;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 grey;
@@ -164,7 +166,8 @@ nav {
 
 .teaser-content{
   padding: 20px;
-  max-width: 250px;
+  max-width: auto;
+  height: 50%;
 }
 
 .teaser-content .teaser-title{
@@ -172,6 +175,7 @@ nav {
 }
 
 .teaser-content .teaser-text{
+  margin: 0;
   font-size: 10px;
   overflow: hidden;
   display: -webkit-box;
@@ -357,6 +361,11 @@ width: 250px;
     display: block;
   }
 
+  .teaser{
+    width: 480px;
+    height: 480px;
+  }
+
   .contact-form{
     padding: 0 22% 3% 22%;
   }
@@ -422,7 +431,11 @@ width: 250px;
 
   .teasers-container{
     grid-template-columns:none;
+  }
 
+  .teaser{
+    width: 480px;
+    height: 480px;
   }
 
   #section-three {
