--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ nav {
 }
 
 .teaser-content{
+  position: relative;
   padding: 20px;
   max-width: auto;
   height: 50%;
@@ -176,14 +177,17 @@ nav {
 
 .teaser-content .teaser-text{
   margin: 0;
-  font-size: 10px;
+  font-size: 12px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
 
 .teaser-button{
+  position: absolute;
+  right: 30px;
+  bottom: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -364,6 +368,15 @@ width: 250px;
   .teaser{
     width: 480px;
     height: 480px;
+  }
+
+  .teaser-content .teaser-text{ 
+    font-size: 15px;
+  }
+
+  .teaser-button{
+    right: 30p;
+    bottom: 10px;
   }
 
   .contact-form{
