--- a/css/styles.css
+++ b/css/styles.css
@@ -365,6 +365,10 @@ width: 250px;
     display: block;
   }
 
+  .top-container {
+    height: 800px;
+  }
+
   .teaser{
     width: 480px;
     height: 480px;
