--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ width: 250px;
   }
 
   .top-container {
-    height: 800px;
+    height: 1000px;
   }
 
   .teaser{
@@ -437,6 +437,10 @@ width: 250px;
   }
   .burger{
     display: block;
+  }
+
+  .top-container {
+    height: 1200px;
   }
 
   #section-two {
