--- a/css/styles.css
+++ b/css/styles.css
@@ -304,7 +304,7 @@ padding: 30px;
   display:grid;
   justify-content: space-around;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 50px;
+  column-gap: 30px;
 }
 
 .footer-links{
@@ -314,12 +314,13 @@ width: 250px;
 
 .footer-right h2{
   padding-bottom: 10px;
-  font-size: 15px;
+  font-size: 20px;
   
 }
 
 .footer-right li{
   margin-bottom: 10px;
+  font-size: 15px;
 }
 
 .footer-right li,a{
@@ -404,7 +405,15 @@ width: 250px;
 
   .footer-right{
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .footer-right h2{
+    font-size: 25px;
+    
+  }
   
+  .footer-right li{
+    font-size: 20px;
   }
 
 }
@@ -440,7 +449,7 @@ width: 250px;
   }
 
   .top-container {
-    height: 1200px;
+    height: 1000px;
   }
 
   #section-two {
@@ -476,7 +485,15 @@ width: 250px;
 
   .footer-right{
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .footer-right h2{
+    font-size: 25px;
+    
+  }
   
+  .footer-right li{
+    font-size: 20px;
   }
   
 
