--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,7 @@ width: 250px;
   }
   .nav-links li{
     opacity: 0;
+    font-size: 30px;
   }
   .burger{
     display: block;
@@ -443,6 +444,7 @@ width: 250px;
   }
   .nav-links li{
     opacity: 0;
+    font-size: 30px;
   }
   .burger{
     display: block;
